# curso-workout_api-santander

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  routers.py
alembic/: env.py
alembic/versions/: 501eaaadb6d3_adiciona_server_default_a_created_at_em_.py  51d4c56c9e20_criação_inicial_das_tabelas.py  61f2871e1c75_ajusta_categoriamodel_para_usar_uuid_e_.py  7c928f434304_adiciona_server_default_a_created_at_em_.py  b3589580b685_adiciona_server_default_a_created_at_em_.py  e4698425249e_adiciona_created_at_ao_centro_.py
curso_santander/: models.py
curso_santander/atleta/: controler.py  models.py  schemas.py
curso_santander/categorias/: controler.py  models.py  schemas.py
curso_santander/centro_treinamento/: controler.py  models.py  schemas.py
curso_santander/configs/: database.py  settings.py
curso_santander/contrib/: dependencies.py  models.py  schemas.py
curso_santander/contrib/repository/: models.py
